Fix overlap of navigation bar

--- a/viisi/scss/mobile.scss
+++ b/viisi/scss/mobile.scss
@@ -47,7 +47,6 @@
     background: white !important;
     padding: 0.5em !important;
     text-align: center !important;
-    border-top: 1px solid $linkColor;
     bottom: 0px;
     top: unset  !important;
   }
